y.output
   0  $accept : list $end

   1  list :
   2       | list eos
   3       | list pr eos
   4       | list asgn eos
   5       | list expr eos
   6       | list gr eos
   7       | list LS eos
   8       | list CI STRING eos
   9       | list QUIT eos
  10       | list DI eos
  11       | list error eos

  12  $$1 :

  13  gr : GR $$1 plotlist

  14  plotlist : plotspec
  15           | plotlist plotsep plotspec

  16  plotsep : ';'

  17  plotspec : expr
  18           | plotspec ',' expr
  19           | plotspec xl
  20           | plotspec yl

  21  xl : XL expr ',' expr

  22  yl : YL expr ',' expr

  23  pr : PR expr

  24  asgn : VAR '=' expr

  25  real : NUMBER
  26       | '-' NUMBER

  27  expr : real
  28       | real I
  29       | '{' coord_list '}'
  30       | I
  31       | VAR
  32       | VAR '(' expr ')'
  33       | BLTIN '(' expr ',' expr ')'
  34       | BLTIN '(' expr ')'
  35       | '+' expr
  36       | '-' expr
  37       | expr '+' expr
  38       | expr '-' expr
  39       | expr '*' expr
  40       | expr '/' expr
  41       | expr '^' expr
  42       | '(' expr ')'

  43  coord : real ',' expr

  44  coord_list : coord coord
  45             | coord_list coord

  46  eos : '\n'

state 0
	$accept : . list $end  (0)
	list : .  (1)

	.  reduce 1

	list  goto 1


state 1
	$accept : list . $end  (0)
	list : list . eos  (2)
	list : list . pr eos  (3)
	list : list . asgn eos  (4)
	list : list . expr eos  (5)
	list : list . gr eos  (6)
	list : list . LS eos  (7)
	list : list . CI STRING eos  (8)
	list : list . QUIT eos  (9)
	list : list . DI eos  (10)
	list : list . error eos  (11)

	$end  accept
	error  shift 2
	I  shift 3
	NUMBER  shift 4
	VAR  shift 5
	BLTIN  shift 6
	GR  shift 7
	LS  shift 8
	PR  shift 9
	CI  shift 10
	DI  shift 11
	QUIT  shift 12
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	'\n'  shift 17
	.  error

	real  goto 18
	expr  goto 19
	asgn  goto 20
	pr  goto 21
	eos  goto 22
	gr  goto 23


state 2
	list : list error . eos  (11)

	'\n'  shift 17
	.  error

	eos  goto 24


state 3
	expr : I .  (30)

	.  reduce 30


state 4
	real : NUMBER .  (25)

	.  reduce 25


state 5
	asgn : VAR . '=' expr  (24)
	expr : VAR .  (31)
	expr : VAR . '(' expr ')'  (32)

	'='  shift 25
	'('  shift 26
	'+'  reduce 31
	'-'  reduce 31
	'*'  reduce 31
	'/'  reduce 31
	'^'  reduce 31
	'\n'  reduce 31


state 6
	expr : BLTIN . '(' expr ',' expr ')'  (33)
	expr : BLTIN . '(' expr ')'  (34)

	'('  shift 27
	.  error


state 7
	gr : GR . $$1 plotlist  (13)
	$$1 : .  (12)

	.  reduce 12

	$$1  goto 28


state 8
	list : list LS . eos  (7)

	'\n'  shift 17
	.  error

	eos  goto 29


state 9
	pr : PR . expr  (23)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 31


state 10
	list : list CI . STRING eos  (8)

	STRING  shift 32
	.  error


state 11
	list : list DI . eos  (10)

	'\n'  shift 17
	.  error

	eos  goto 33


state 12
	list : list QUIT . eos  (9)

	'\n'  shift 17
	.  error

	eos  goto 34


state 13
	expr : '+' . expr  (35)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 35


state 14
	real : '-' . NUMBER  (26)
	expr : '-' . expr  (36)

	I  shift 3
	NUMBER  shift 36
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 37


state 15
	expr : '{' . coord_list '}'  (29)

	NUMBER  shift 4
	'-'  shift 38
	.  error

	real  goto 39
	coord  goto 40
	coord_list  goto 41


state 16
	expr : '(' . expr ')'  (42)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 42


state 17
	eos : '\n' .  (46)

	.  reduce 46


state 18
	expr : real .  (27)
	expr : real . I  (28)

	I  shift 43
	NUMBER  reduce 27
	XL  reduce 27
	YL  reduce 27
	'+'  reduce 27
	'-'  reduce 27
	'*'  reduce 27
	'/'  reduce 27
	'^'  reduce 27
	';'  reduce 27
	','  reduce 27
	'}'  reduce 27
	')'  reduce 27
	'\n'  reduce 27


state 19
	list : list expr . eos  (5)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	'\n'  shift 17
	.  error

	eos  goto 49


state 20
	list : list asgn . eos  (4)

	'\n'  shift 17
	.  error

	eos  goto 50


state 21
	list : list pr . eos  (3)

	'\n'  shift 17
	.  error

	eos  goto 51


state 22
	list : list eos .  (2)

	.  reduce 2


state 23
	list : list gr . eos  (6)

	'\n'  shift 17
	.  error

	eos  goto 52


state 24
	list : list error eos .  (11)

	.  reduce 11


state 25
	asgn : VAR '=' . expr  (24)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 53


state 26
	expr : VAR '(' . expr ')'  (32)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 54


state 27
	expr : BLTIN '(' . expr ',' expr ')'  (33)
	expr : BLTIN '(' . expr ')'  (34)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 55


state 28
	gr : GR $$1 . plotlist  (13)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 56
	plotlist  goto 57
	plotspec  goto 58


state 29
	list : list LS eos .  (7)

	.  reduce 7


state 30
	expr : VAR .  (31)
	expr : VAR . '(' expr ')'  (32)

	'('  shift 26
	NUMBER  reduce 31
	XL  reduce 31
	YL  reduce 31
	'+'  reduce 31
	'-'  reduce 31
	'*'  reduce 31
	'/'  reduce 31
	'^'  reduce 31
	';'  reduce 31
	','  reduce 31
	'}'  reduce 31
	')'  reduce 31
	'\n'  reduce 31


state 31
	pr : PR expr .  (23)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	'\n'  reduce 23


state 32
	list : list CI STRING . eos  (8)

	'\n'  shift 17
	.  error

	eos  goto 59


state 33
	list : list DI eos .  (10)

	.  reduce 10


state 34
	list : list QUIT eos .  (9)

	.  reduce 9


state 35
	expr : '+' expr .  (35)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'^'  shift 48
	NUMBER  reduce 35
	XL  reduce 35
	YL  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	';'  reduce 35
	','  reduce 35
	'}'  reduce 35
	')'  reduce 35
	'\n'  reduce 35


36: reduce/reduce conflict (reduce 25, reduce 26) on I
36: reduce/reduce conflict (reduce 25, reduce 26) on NUMBER
36: reduce/reduce conflict (reduce 25, reduce 26) on XL
36: reduce/reduce conflict (reduce 25, reduce 26) on YL
36: reduce/reduce conflict (reduce 25, reduce 26) on '+'
36: reduce/reduce conflict (reduce 25, reduce 26) on '-'
36: reduce/reduce conflict (reduce 25, reduce 26) on '*'
36: reduce/reduce conflict (reduce 25, reduce 26) on '/'
36: reduce/reduce conflict (reduce 25, reduce 26) on '^'
36: reduce/reduce conflict (reduce 25, reduce 26) on ';'
36: reduce/reduce conflict (reduce 25, reduce 26) on ','
36: reduce/reduce conflict (reduce 25, reduce 26) on '}'
36: reduce/reduce conflict (reduce 25, reduce 26) on ')'
36: reduce/reduce conflict (reduce 25, reduce 26) on '\n'
state 36
	real : NUMBER .  (25)
	real : '-' NUMBER .  (26)

	.  reduce 25


state 37
	expr : '-' expr .  (36)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'^'  shift 48
	NUMBER  reduce 36
	XL  reduce 36
	YL  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	';'  reduce 36
	','  reduce 36
	'}'  reduce 36
	')'  reduce 36
	'\n'  reduce 36


state 38
	real : '-' . NUMBER  (26)

	NUMBER  shift 60
	.  error


state 39
	coord : real . ',' expr  (43)

	','  shift 61
	.  error


state 40
	coord_list : coord . coord  (44)

	NUMBER  shift 4
	'-'  shift 38
	.  error

	real  goto 39
	coord  goto 62


state 41
	expr : '{' coord_list . '}'  (29)
	coord_list : coord_list . coord  (45)

	NUMBER  shift 4
	'-'  shift 38
	'}'  shift 63
	.  error

	real  goto 39
	coord  goto 64


state 42
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)
	expr : '(' expr . ')'  (42)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	')'  shift 65
	.  error


state 43
	expr : real I .  (28)

	.  reduce 28


state 44
	expr : expr '+' . expr  (37)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 66


state 45
	expr : expr '-' . expr  (38)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 67


state 46
	expr : expr '*' . expr  (39)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 68


state 47
	expr : expr '/' . expr  (40)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 69


state 48
	expr : expr '^' . expr  (41)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 70


state 49
	list : list expr eos .  (5)

	.  reduce 5


state 50
	list : list asgn eos .  (4)

	.  reduce 4


state 51
	list : list pr eos .  (3)

	.  reduce 3


state 52
	list : list gr eos .  (6)

	.  reduce 6


state 53
	asgn : VAR '=' expr .  (24)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	'\n'  reduce 24


state 54
	expr : VAR '(' expr . ')'  (32)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	')'  shift 71
	.  error


state 55
	expr : BLTIN '(' expr . ',' expr ')'  (33)
	expr : BLTIN '(' expr . ')'  (34)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	','  shift 72
	')'  shift 73
	.  error


state 56
	plotspec : expr .  (17)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	XL  reduce 17
	YL  reduce 17
	';'  reduce 17
	','  reduce 17
	'\n'  reduce 17


state 57
	gr : GR $$1 plotlist .  (13)
	plotlist : plotlist . plotsep plotspec  (15)

	';'  shift 74
	'\n'  reduce 13

	plotsep  goto 75


state 58
	plotlist : plotspec .  (14)
	plotspec : plotspec . ',' expr  (18)
	plotspec : plotspec . xl  (19)
	plotspec : plotspec . yl  (20)

	XL  shift 76
	YL  shift 77
	','  shift 78
	';'  reduce 14
	'\n'  reduce 14

	xl  goto 79
	yl  goto 80


state 59
	list : list CI STRING eos .  (8)

	.  reduce 8


state 60
	real : '-' NUMBER .  (26)

	.  reduce 26


state 61
	coord : real ',' . expr  (43)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 81


state 62
	coord_list : coord coord .  (44)

	.  reduce 44


state 63
	expr : '{' coord_list '}' .  (29)

	.  reduce 29


state 64
	coord_list : coord_list coord .  (45)

	.  reduce 45


state 65
	expr : '(' expr ')' .  (42)

	.  reduce 42


state 66
	expr : expr . '+' expr  (37)
	expr : expr '+' expr .  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	NUMBER  reduce 37
	XL  reduce 37
	YL  reduce 37
	'+'  reduce 37
	'-'  reduce 37
	';'  reduce 37
	','  reduce 37
	'}'  reduce 37
	')'  reduce 37
	'\n'  reduce 37


state 67
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr '-' expr .  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	NUMBER  reduce 38
	XL  reduce 38
	YL  reduce 38
	'+'  reduce 38
	'-'  reduce 38
	';'  reduce 38
	','  reduce 38
	'}'  reduce 38
	')'  reduce 38
	'\n'  reduce 38


state 68
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr '*' expr .  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'^'  shift 48
	NUMBER  reduce 39
	XL  reduce 39
	YL  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	';'  reduce 39
	','  reduce 39
	'}'  reduce 39
	')'  reduce 39
	'\n'  reduce 39


state 69
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr '/' expr .  (40)
	expr : expr . '^' expr  (41)

	'^'  shift 48
	NUMBER  reduce 40
	XL  reduce 40
	YL  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	';'  reduce 40
	','  reduce 40
	'}'  reduce 40
	')'  reduce 40
	'\n'  reduce 40


state 70
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)
	expr : expr '^' expr .  (41)

	'^'  shift 48
	NUMBER  reduce 41
	XL  reduce 41
	YL  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	';'  reduce 41
	','  reduce 41
	'}'  reduce 41
	')'  reduce 41
	'\n'  reduce 41


state 71
	expr : VAR '(' expr ')' .  (32)

	.  reduce 32


state 72
	expr : BLTIN '(' expr ',' . expr ')'  (33)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 82


state 73
	expr : BLTIN '(' expr ')' .  (34)

	.  reduce 34


state 74
	plotsep : ';' .  (16)

	.  reduce 16


state 75
	plotlist : plotlist plotsep . plotspec  (15)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 56
	plotspec  goto 83


state 76
	xl : XL . expr ',' expr  (21)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 84


state 77
	yl : YL . expr ',' expr  (22)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 85


state 78
	plotspec : plotspec ',' . expr  (18)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 86


state 79
	plotspec : plotspec xl .  (19)

	.  reduce 19


state 80
	plotspec : plotspec yl .  (20)

	.  reduce 20


81: shift/reduce conflict (shift 45, reduce 43) on '-'
state 81
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)
	coord : real ',' expr .  (43)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	NUMBER  reduce 43
	'}'  reduce 43


state 82
	expr : BLTIN '(' expr ',' expr . ')'  (33)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	')'  shift 87
	.  error


state 83
	plotlist : plotlist plotsep plotspec .  (15)
	plotspec : plotspec . ',' expr  (18)
	plotspec : plotspec . xl  (19)
	plotspec : plotspec . yl  (20)

	XL  shift 76
	YL  shift 77
	','  shift 78
	';'  reduce 15
	'\n'  reduce 15

	xl  goto 79
	yl  goto 80


state 84
	xl : XL expr . ',' expr  (21)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	','  shift 88
	.  error


state 85
	yl : YL expr . ',' expr  (22)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	','  shift 89
	.  error


state 86
	plotspec : plotspec ',' expr .  (18)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	XL  reduce 18
	YL  reduce 18
	';'  reduce 18
	','  reduce 18
	'\n'  reduce 18


state 87
	expr : BLTIN '(' expr ',' expr ')' .  (33)

	.  reduce 33


state 88
	xl : XL expr ',' . expr  (21)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 90


state 89
	yl : YL expr ',' . expr  (22)

	I  shift 3
	NUMBER  shift 4
	VAR  shift 30
	BLTIN  shift 6
	'+'  shift 13
	'-'  shift 14
	'{'  shift 15
	'('  shift 16
	.  error

	real  goto 18
	expr  goto 91


state 90
	xl : XL expr ',' expr .  (21)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	XL  reduce 21
	YL  reduce 21
	';'  reduce 21
	','  reduce 21
	'\n'  reduce 21


state 91
	yl : YL expr ',' expr .  (22)
	expr : expr . '+' expr  (37)
	expr : expr . '-' expr  (38)
	expr : expr . '*' expr  (39)
	expr : expr . '/' expr  (40)
	expr : expr . '^' expr  (41)

	'+'  shift 44
	'-'  shift 45
	'*'  shift 46
	'/'  shift 47
	'^'  shift 48
	XL  reduce 22
	YL  reduce 22
	';'  reduce 22
	','  reduce 22
	'\n'  reduce 22


State 36 contains 14 reduce/reduce conflicts.
State 81 contains 1 shift/reduce conflict.


31 terminals, 16 nonterminals
47 grammar rules, 92 states
